# todo_python

./: pyproject.toml
tests/: conftest.py  test_todo_python.py
tests/api/: test_api.py
tests/integration/: test_services.py
tests/unit/: test_domain.py  test_orm.py  test_repositories.py
todo_python/: app.py  utils.py
todo_python/adapters/: orm.py  repositories.py
todo_python/domain/: __init__.py  models.py
todo_python/resources/: todos.py
todo_python/services/: __init__.py  handlers.py  unitofwork.py
