[tool.poetry]
name = "todo_python"
version = "0.1.0"
description = ""
authors = ["Thiago Pacheco <thiagodelimapacheco@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = {version = "^22.8.0", allow-prereleases = true}
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
